WeetStore.log
uk/ac/warwick/java/cs126/services/WeetStore.java:119: error: cannot find symbol
            sortedWeetsContaining.insertKeyValuePair(weetsContaining.get(j).getKey(), weetsContaining.get(i).getValue());
                                                                                                          ^
  symbol:   variable i
  location: class WeetStore
uk/ac/warwick/java/cs126/services/WeetStore.java:119: error: cannot find symbol
            sortedWeetsContaining.insertKeyValuePair(weetsContaining.get(j).getKey(), weetsContaining.get(i).getValue());
                                                                           ^
  symbol:   method getKey()
  location: class WeetStore.Node<Integer,Weet>
uk/ac/warwick/java/cs126/services/WeetStore.java:124: error: wrong number of type arguments; required 1
        MyArrayList<Integer, Weet> allSortedWeetsContaining = sortedWeetsContaining.getNodesTraversed();
                   ^
Note: uk/ac/warwick/java/cs126/services/WeetStore.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: uk/ac/warwick/java/cs126/services/WeetStore.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
